syntax = "proto3";
package tailsys;
option go_package = "./commands";

import "google/protobuf/timestamp.proto";
import "sysinfo.proto";

message CommandRequest {
  google.protobuf.Timestamp requested = 1;
  string command = 2;
  Key key = 3;
}

message CommandResponse {
  google.protobuf.Timestamp timestamp = 1;
  bool successful = 2;
  bytes output = 3;
  int32 exitCode = 4;
}

service CommandRunner {
  rpc Command(CommandRequest) returns (CommandResponse) {}; 
}

message NodeQuery {
  string pattern = 1;
  Key key = 2;
}

message NodeQueryResponse {
  repeated string nodes = 1;
}

message AggregateResponses {
  repeated CommandResponse response = 1;
}

message CommanderRequest {
  string pattern = 1;
  string command = 2;
}

service CommandManager {
  rpc GetNodes(NodeQuery) returns(NodeQueryResponse) {};
  rpc SendCommandToNodes(CommanderRequest) returns(AggregateResponses) {};
  rpc SendCommandToNodesStream(CommanderRequest) returns(stream CommandResponse) {};
}

